--- a/index.html
+++ b/index.html
@@ -408,25 +408,11 @@
             transform: scale(1.1);
         }
 
-        /* 调试按钮 */
-        .debug-btn {
-            position: absolute;
-            top: 20px;
-            right: 70px;
-            background: #888;
-            color: white;
-            border: none;
-            padding: 5px 15px;
-            border-radius: 5px;
-            cursor: pointer;
-            font-size: 12px;
-        }
     </style>
 </head>
 <body>
     <div class="container">
         <button class="close-btn" onclick="window.close()" title="关闭">×</button>
-        <button class="debug-btn" onclick="resetData()" title="重置数据">重置</button>
         <div class="check-in-days" id="checkInDays">打卡 1 天</div>
 
         <!-- 底部按钮组 -->
@@ -478,6 +464,35 @@
     <script>
         console.log('脚本开始加载...');
 
+        // 获取或设置用户标识
+        function getUserId() {
+            let userId = localStorage.getItem('maoismUserId');
+
+            if (!userId) {
+                // 首次访问，弹窗输入手机号后4位
+                while (!userId || userId.length !== 4 || isNaN(userId)) {
+                    userId = prompt('🎯 欢迎使用每日毛选！\n\n请输入您的手机号后4位（用于记录您的打卡数据）：', '');
+
+                    if (userId === null) {
+                        // 用户取消，使用随机ID
+                        userId = Math.floor(Math.random() * 10000).toString().padStart(4, '0');
+                        break;
+                    }
+
+                    userId = userId.trim();
+
+                    if (userId.length !== 4 || isNaN(userId)) {
+                        alert('❌ 请输入4位数字');
+                    }
+                }
+
+                localStorage.setItem('maoismUserId', userId);
+                alert(`✅ 已为您创建账号（尾号${userId}），您的打卡记录将被保存！`);
+            }
+
+            return userId;
+        }
+
         // 毛泽东选集经典语录库（缩短为测试）
         const quotes = [
             "我们的同志在困难的时候，要看到成绩，要看到光明，要提高我们的勇气。",
@@ -508,13 +523,6 @@
             window.close();
         }
 
-        // 重置数据
-        function resetData() {
-            localStorage.removeItem('dailyMaoism');
-            alert('数据已重置，页面即将刷新');
-            location.reload();
-        }
-
         // 获取今天的日期字符串
         function getTodayStr() {
             const now = new Date();
@@ -532,14 +540,20 @@
         function init() {
             console.log('初始化开始...');
 
+            // 获取用户ID
+            const userId = getUserId();
+            console.log('当前用户ID:', userId);
+
             showDate();
 
-            // 读取localStorage
-            let data = localStorage.getItem('dailyMaoism');
+            // 读取用户专属数据（使用用户ID作为key）
+            const storageKey = `dailyMaoism_${userId}`;
+            let data = localStorage.getItem(storageKey);
             console.log('localStorage数据:', data);
 
             if (!data) {
                 data = {
+                    userId: userId,
                     lastDate: '',
                     totalDays: 0,
                     favorites: []
@@ -556,11 +570,11 @@
                 console.log('新的一天');
                 data.lastDate = today;
                 data.totalDays++;
-                localStorage.setItem('dailyMaoism', JSON.stringify(data));
+                localStorage.setItem(storageKey, JSON.stringify(data));
             }
 
-            // 更新打卡天数
-            document.getElementById('checkInDays').textContent = `打卡 ${data.totalDays} 天`;
+            // 更新打卡天数（显示尾号）
+            document.getElementById('checkInDays').textContent = `打卡 ${data.totalDays} 天（尾号${userId}）`;
 
             console.log('初始化完成，准备抽卡');
 
@@ -634,7 +648,9 @@
 
         // 切换收藏
         function toggleFavorite() {
-            let data = JSON.parse(localStorage.getItem('dailyMaoism'));
+            const userId = localStorage.getItem('maoismUserId');
+            const storageKey = `dailyMaoism_${userId}`;
+            let data = JSON.parse(localStorage.getItem(storageKey));
             const index = data.favorites.indexOf(currentQuoteIndex);
 
             if (index > -1) {
@@ -643,14 +659,16 @@
                 data.favorites.push(currentQuoteIndex);
             }
 
-            localStorage.setItem('dailyMaoism', JSON.stringify(data));
+            localStorage.setItem(storageKey, JSON.stringify(data));
             updateFavoriteIcon();
         }
 
         // 更新收藏图标
         function updateFavoriteIcon() {
+            const userId = localStorage.getItem('maoismUserId');
+            const storageKey = `dailyMaoism_${userId}`;
             const icon = document.getElementById('favoriteIcon');
-            const data = JSON.parse(localStorage.getItem('dailyMaoism'));
+            const data = JSON.parse(localStorage.getItem(storageKey));
             const isFavorited = data.favorites.includes(currentQuoteIndex);
 
             if (isFavorited) {
@@ -664,9 +682,11 @@
 
         // 查看收藏
         function viewFavorites() {
+            const userId = localStorage.getItem('maoismUserId');
+            const storageKey = `dailyMaoism_${userId}`;
             const modal = document.getElementById('favoritesModal');
             const listEl = document.getElementById('favoritesList');
-            const data = JSON.parse(localStorage.getItem('dailyMaoism'));
+            const data = JSON.parse(localStorage.getItem(storageKey));
             const favorites = data.favorites;
 
             if (favorites.length === 0) {
@@ -690,12 +710,14 @@
 
         // 移除收藏
         function removeFavorite(index) {
-            let data = JSON.parse(localStorage.getItem('dailyMaoism'));
+            const userId = localStorage.getItem('maoismUserId');
+            const storageKey = `dailyMaoism_${userId}`;
+            let data = JSON.parse(localStorage.getItem(storageKey));
             const favIndex = data.favorites.indexOf(index);
             if (favIndex > -1) {
                 data.favorites.splice(favIndex, 1);
             }
-            localStorage.setItem('dailyMaoism', JSON.stringify(data));
+            localStorage.setItem(storageKey, JSON.stringify(data));
 
             viewFavorites();
 
